<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="test_result">Number of results: 42</string>
</resources>